# rcss3d_nao

./: CHANGELOG.rst  CMakeLists.txt  README.md  dependencies.repos  package.xml
.github/workflows/: build_and_test_foxy.yaml  build_and_test_rolling.yaml
include/rcss3d_agent_nao/: rcss3d_agent_nao.hpp
include/rcss3d_nao/: rcss3d_nao.hpp  rcss3d_nao_node.hpp
src/: angle_conversion.hpp  complementary_filter.cpp  complementary_filter.hpp  conversion.hpp  deg2rad.hpp  joint_pid.hpp  main.cpp  nao_joint_velocities.hpp  nao_joints_pid.cpp  nao_joints_pid.hpp  nao_to_sim.cpp  nao_to_sim.hpp  polar_to_point.hpp  rcss3d_agent_nao.cpp  rcss3d_nao.cpp  rcss3d_nao_node.cpp  sim_to_nao.cpp  sim_to_nao.hpp  sim_to_soccer_vision_3d.cpp  sim_to_soccer_vision_3d.hpp
test/: CMakeLists.txt  test_joint_pid.cpp  test_nao_to_sim.cpp  test_polar_to_point.cpp  test_sim_to_nao.cpp  test_sim_to_soccer_vision_3d.cpp
